--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@storybook/jest": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
